修改台账招标委员会主任显示，修改台账、进度负责人筛选

--- a/TenderInfo/Views/Account/TableInfoProject.cshtml
+++ b/TenderInfo/Views/Account/TableInfoProject.cshtml
@@ -449,7 +449,7 @@
                     formatter: function (value, row, index) {
                         var list = "<table class='table  table-bordered'>";
                         $.each(row.accountChildSecond, function (indexInArray, valueOfElement) {
-                            list += "<tr><td>" + valueOfElement.IsEvaluationDirector + "</td></tr>";
+                            list += "<tr><td>" + (valueOfElement.IsEvaluationDirector === "" ? "-" : valueOfElement.IsEvaluationDirector) + "</td></tr>";
                         });
                         list += "</table>";
                         return list;
