--- a/TenderInfo/Views/Account/SearchInfo.cshtml
+++ b/TenderInfo/Views/Account/SearchInfo.cshtml
@@ -134,18 +134,40 @@
 
         //导出按钮
         $("#btnExcel").click(function () {
+            var projectName=$("#tbxProjectNameSearch").val()//项目名称
+            var tenderFileNum=$("#tbxTenderFileNumSearch").val()//项目文件编号
+            var projectResponsiblePersonID=$("#ddlProjectResponsiblePersonSearch").val()//招标项目负责人ID
+            var tenderInfo=$("#ddlTenderInfoSearch").val()//招标情况
+            var applyPerson=$("#tbxApplyPersonSearch").val()//申请人
+            var tenderSuccessPerson=$("#tbxTenderSuccessPersonSearch").val()//中标人名称
+            var tenderStartDateStart=$("#tbxTenderStartDateStartSearch").val()//开标日期范围开始
+            var tenderStartDateEnd=$("#tbxTenderStartDateEndSearch").val()//开标日期范围结束
+            var planInvestPriceStart=$("#tbxPlanInvestPriceStartSearch").val()//预计投资范围开始
+            var planInvestPriceEnd = $("#tbxPlanInvestPriceEndSearch").val()//预计投资范围结束
+
+            var searchStr = "projectName=" + projectName +
+                "&projectResponsiblePersonID=" + projectResponsiblePersonID+
+                "&tenderInfo=" + tenderInfo+
+                "&applyPerson=" + applyPerson+
+                "&tenderSuccessPerson=" + tenderSuccessPerson+
+                "&tenderStartDateStart=" + tenderStartDateStart+
+                "&tenderStartDateEnd=" + tenderStartDateEnd+
+                "&planInvestPriceStart=" + planInvestPriceStart+
+                "&planInvestPriceEnd=" + planInvestPriceEnd+
+                "&tenderFileNum=" + tenderFileNum;
+
             switch ($("#accountType").text()) {
                 case "物资":
-                    window.location.href = "/Account/AccountToExcel?projectType=物资";
+                    window.location.href = "/Account/AccountToExcel?projectType=物资&" + searchStr;
                     break;
                 case "框架":
-                    window.location.href = "/Account/FrameToExcel?projectType=框架";
+                    window.location.href = "/Account/FrameToExcel?projectType=框架&" + searchStr;
                     break;
                 case "工程":
-                    window.location.href = "/Account/ProjectToExcel?projectType=工程";
+                    window.location.href = "/Account/ProjectToExcel?projectType=工程&" + searchStr;
                     break;
                 case "服务":
-                    window.location.href = "/Account/ProjectToExcel?projectType=服务";
+                    window.location.href = "/Account/ProjectToExcel?projectType=服务&" + searchStr;
                     break;
             }
         });
